--- a/FrugalShopper.csproj
+++ b/FrugalShopper.csproj
@@ -116,6 +116,38 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\css\my_layout.css" />
+    <Content Include="Content\css\patches\patch_my_layout.css" />
+    <Content Include="Content\css\screen\basemod.css" />
+    <Content Include="Content\css\screen\content.css" />
+    <Content Include="Content\css\site.css" />
+    <Content Include="Content\images\bg_blue.png" />
+    <Content Include="Content\images\cart-icon64.png" />
+    <Content Include="Content\images\cart-icon.png" />
+    <Content Include="Content\images\dummy_150.png" />
+    <Content Include="Content\images\dummy_300.png" />
+    <Content Include="Content\images\tableft.gif" />
+    <Content Include="Content\images\tableftB.gif" />
+    <Content Include="Content\images\tableftC.gif" />
+    <Content Include="Content\images\tableftD.gif" />
+    <Content Include="Content\images\tableftE.gif" />
+    <Content Include="Content\images\tableftF.gif" />
+    <Content Include="Content\images\tableftG.gif" />
+    <Content Include="Content\images\tableftH.gif" />
+    <Content Include="Content\images\tableftI.gif" />
+    <Content Include="Content\images\tableftJ.gif" />
+    <Content Include="Content\images\tableftK.gif" />
+    <Content Include="Content\images\tabright.gif" />
+    <Content Include="Content\images\tabrightB.gif" />
+    <Content Include="Content\images\tabrightC.gif" />
+    <Content Include="Content\images\tabrightD.gif" />
+    <Content Include="Content\images\tabrightE.gif" />
+    <Content Include="Content\images\tabrightF.gif" />
+    <Content Include="Content\images\tabrightG.gif" />
+    <Content Include="Content\images\tabrightH.gif" />
+    <Content Include="Content\images\tabrightI.gif" />
+    <Content Include="Content\images\tabrightJ.gif" />
+    <Content Include="Content\images\tabrightK.gif" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -144,7 +176,6 @@
     <Content Include="Content\themes\base\jquery.ui.tabs.css" />
     <Content Include="Content\themes\base\jquery.ui.theme.css" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
     <Content Include="Scripts\jquery-1.7.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
@@ -157,8 +188,8 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\knockout-1.3.0beta.debug.js" />
-    <Content Include="Scripts\knockout-1.3.0beta.js" />
+    <Content Include="Scripts\knockout-2.0.0.debug.js" />
+    <Content Include="Scripts\knockout-2.0.0.js" />
     <Content Include="Scripts\modernizr-2.0.6-development-only.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -183,6 +214,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\Index.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Shared\_header.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
